# kedro-airflow-k8s

./: .bumpversion.cfg  .codeclimate.yml  .copier-answers.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: codeql-analysis.yml  prepare-release.yml  publish.yml  python-package.yml  test.yml
dags/: kedro_airflow_k8s.py
docs/: conf.py  index.rst  spellcheck_exceptions.txt
docs/source/01_introduction/: 01_intro.md
docs/source/02_installation/: 01_installation.md  02_configuration.md
docs/source/03_getting_started/: 01_quickstart.md  02_gcp.md  03_mlflow.md  04_authentication.md  05_spark.md  06_aws_fargate.md  index.rst
kedro_airflow_k8s/: airflow.py  airflow_dag_template.j2  airflow_spark_task_template.j2  cli.py  cli_helper.py  config.py  context_helper.py  dataproc_init_script_template.j2  hooks.py  task_group.py  template.py  template_helper.py
kedro_airflow_k8s/operators/: aws_fargate.py  create_pipeline_storage.py  data_volume_init.py  data_volume_init_template.j2  delete_pipeline_storage.py  init_experiment_operator.py  node_pod.py  spark_submit_k8s.py  spark_submit_k8s_operator.py  start_mlflow_experiment.py
kedro_airflow_k8s/templates/: github-on-merge-to-master.yml  github-on-push.yml  spark_run.py  spark_run.py.tpl
tests/: __init__.py  operator_factory.py  test_airflow.py  test_cli.py  test_cli_helper.py  test_config.py  test_config.yml  test_context_helper.py  test_hooks.py  test_task_group_factory.py  test_template.py
tests/e2e/: catalog.yml  starter-config.yml
tests/operators/: test_aws_fargate_operator.py  test_create_pipeline_storage_operator.py  test_data_volume_init_operator.py  test_delete_pipeline_storage_operator.py  test_init_experiment_operator.py  test_node_pod_operator.py  test_spark_submit_k8s_operator.py  test_start_mlflow_experiment_operator.py
